tests/trybuild/plan_input_raw_paths.stderr
error[E0308]: mismatched types
 --> tests/trybuild/plan_input_raw_paths.rs:8:21
  |
8 |             source: std::path::PathBuf::from("/a"),
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `SafePath`, found `PathBuf`

error[E0308]: mismatched types
 --> tests/trybuild/plan_input_raw_paths.rs:9:21
  |
9 |             target: std::path::PathBuf::from("/b"),
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `SafePath`, found `PathBuf`
